<package>
  <name>siasun_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services and actions used by siasun robot</description>
  <author email="liguobin@siasun.com">Li Guobin</author>

  <maintainer email="liguobin@siasun.com">Li Guobin</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>

</package>
